--- a/pagina webmaster.html
+++ b/pagina webmaster.html
@@ -9,14 +9,14 @@
 	width: 800px;
 	rgba(255,255,81,0.8)
 	font-family: Verdana, Geneva, sans-serif;
-	background-image: url(file:///C|/Users/clases/Downloads/PW/background.png);
+	background-image: url(file:./Imagenes/background.png);
 	background-repeat: repeat;
 }
 #Cuerpo #Logo {
 	height: 273px;
 	width: 300px;
 	float: left;
-	background-image: url(file:///C|/Users/clases/Downloads/PW/logo%20hamburguesa.png);
+	background-image: url(file:./Imagenes/logo%20hamburguesa.png);
 }
 
 #Cuerpo #Menu {
@@ -79,7 +79,7 @@
 
 <div id=top> <div id= Logo></div><!--FIN LOGO DE LA PAGINA-->
   <div align=center class="ColorEslogan" id=ESLOGAN>BARRIGA LLENA CORAZON CONTENTO</div> <!--ESLOGAN-->
-<div id=Contactos><div><img src="file:///C|/Users/clases/Downloads/PW/twitter icon.png" width="32" height="32" longdesc="https://twitter.com/?lang=es" /> </div> <div><img src="file:///C|/Users/clases/Downloads/PW/facebook icon.png" width="32" height="32" longdesc="https://es-la.facebook.com/"/> </div><div> <img src="file:///C|/Users/clases/Downloads/PW/instagram icon.png" width="32" height="32" longdesc="https://www.instagram.com/" /></div></div>
+<div id=Contactos><div><img src="./Imagenes/twitter icon.png" width="32" height="32" longdesc="https://twitter.com/?lang=es" /> </div> <div><img src="./Imagenes/facebook icon.png" width="32" height="32" longdesc="https://es-la.facebook.com/"/> </div><div> <img src="./Imagenes/instagram icon.png" width="32" height="32" longdesc="https://www.instagram.com/" /></div></div>
  </div>
 
 <div id=Cent> 
@@ -100,7 +100,7 @@
       Caracas</span><BR>
     </blockquote>
   </div><!--FIN ITEM CARACAS-->
-  <div><a href="file:///C|/Users/clases/Downloads/PW/https/www.yolopido.com">Pidelo a Domicilio</a></div><!--FIN ITEM A DOMICILIO-->
+  <div><a href="https://www.yolopido.com"><img src="./Imagenes/transportar.png"/></a> </div><!--FIN ITEM A DOMICILIO-->
 </div><!--FIN UBICACION--> </div>
     <div id=mid><div align=left class="coloLetra" id=Menu>
   <font class="ColorTitulos">MENU</font>
