--- a/pagina webmaster.html
+++ b/pagina webmaster.html
@@ -3,10 +3,11 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>HappyFood</title><!-- CABEZERA-->
+
 <style type="text/css">
 #Cuerpo {
-	height: 1000px;
-	width: 800px;
+	height: auto;
+	width: auto;
 	rgba(255,255,81,0.8)
 	font-family: Verdana, Geneva, sans-serif;
 	background-image: url(file:./Imagenes/background.png);
@@ -23,7 +24,7 @@
 	background-color: rgba(255,204,0,0.7);
     border-radius: 7px;
     width: 500px;
-    float: right;
+    float: left;
 }
 #Cuerpo #Ubicacion {
 	background-color: rgba(255,255,81,0.7);
@@ -35,12 +36,12 @@
 	background-color: rgba(255,255,255,0.8);
 	border-radius: 7px;
 	width: 96;
-	float: right;
+	float: left;
 }
 #Cuerpo #ESLOGAN {
 	border-radius: 7px;
-	width: 500px;
-	float: right;
+	width: auto;
+	float: left;
 	background-color: rgba(255,255,153,0.7);
 }
 #Cuerpo #Publicidad {
@@ -48,7 +49,7 @@
 	border-radius: 7px;
 	width: 500px;
 	height: 200px;
-	clear: right;
+	clear: left;
 	color: #F00;
 }
 .coloLetra {
@@ -79,57 +80,62 @@
 
 <div id=top> <div id= Logo></div><!--FIN LOGO DE LA PAGINA-->
   <div align=center class="ColorEslogan" id=ESLOGAN>BARRIGA LLENA CORAZON CONTENTO</div> <!--ESLOGAN-->
-<div id=Contactos><div><img src="./Imagenes/twitter icon.png" width="32" height="32" longdesc="https://twitter.com/?lang=es" /> </div> <div><img src="./Imagenes/facebook icon.png" width="32" height="32" longdesc="https://es-la.facebook.com/"/> </div><div> <img src="./Imagenes/instagram icon.png" width="32" height="32" longdesc="https://www.instagram.com/" /></div></div>
- </div>
+    <div id=Contactos><div><img src="./Imagenes/twitter icon.png" width="32" height="32" longdesc="https://twitter.com/?lang=es" /></div> 
+      <div>
+        <img src="./Imagenes/facebook icon.png" width="32" height="32" longdesc="https://es-la.facebook.com/"/> </div><div> <img src="./Imagenes/instagram icon.png" width="32" height="32" longdesc="https://www.instagram.com/" />
+      </div>
+  </div>
+</div>
 
 <div id=Cent> 
     <div id=izq><div id=Ubicacion>
-  <font  class="ColorTitulos">LOCALIZACION</font><BR>
-  <div>
-    <blockquote>
-      <span class="coloLetra">Maracaibo<BR>
-      </span></blockquote>
-  </div><!--FIN ITEM MARACAIBO-->
-  <div>
-    <blockquote><span class="coloLetra">
-      Valencia<BR>
-    </span></blockquote>
-  </div><!--FIN ITEM VALENCIA-->
-  <div>
-    <blockquote><span class="coloLetra">
-      Caracas</span><BR>
-    </blockquote>
-  </div><!--FIN ITEM CARACAS-->
-  <div><a href="https://www.yolopido.com"><img src="./Imagenes/transportar.png"/></a> </div><!--FIN ITEM A DOMICILIO-->
-</div><!--FIN UBICACION--> </div>
+          <font  class="ColorTitulos">LOCALIZACION</font><BR>
+          <div>
+            <blockquote>
+              <span class="coloLetra">Maracaibo<BR>
+              </span></blockquote>
+          </div><!--FIN ITEM MARACAIBO-->
+          <div>
+            <blockquote><span class="coloLetra">
+              Valencia<BR>
+            </span></blockquote>
+          </div><!--FIN ITEM VALENCIA-->
+          <div>
+            <blockquote><span class="coloLetra">
+              Caracas</span><BR>
+            </blockquote>
+          </div><!--FIN ITEM CARACAS-->
+          <div><a href="https://www.yolopido.com"><img src="./Imagenes/transportar.png"/></a> </div><!--FIN ITEM A DOMICILIO-->
+        </div><!--FIN UBICACION--> 
+    </div><!--FIN AREA izquierda del centro-->
     <div id=mid><div align=left class="coloLetra" id=Menu>
-  <font class="ColorTitulos">MENU</font>
-
-  <div>
-    <blockquote>
-      Pizzas<BR>
-    </blockquote>
-  </div><!--FIN ITEM PIZZA-->
-  <div>
-    <blockquote>
-      Hamburguezas<BR>
-    </blockquote>
-  </div><!--FIN ITEM HAMBURGUESA-->
-  <div>
-    <blockquote>
-      Perro calientes<BR>
-    </blockquote>
-  </div><!--FIN PERRO CALIENTE-->
-  <div>
-    <blockquote class="coloLetra">
-      Cachapas<BR>
-    </blockquote>
-  </div><!--FIN ITEM CACHAPAS-->
- </div><!--FIN MENU-->  </div>
-    <div id=rig><div id=Publicidad>
-  Imagen Publicitaria 
-  </div><!--FIN PUBLICIDAD--> </div>
-</div>
+            <font class="ColorTitulos">MENU</font>
+            <div>
+              <blockquote>
+                Pizzas<BR>
+              </blockquote>
+            </div><!--FIN ITEM PIZZA-->
+            <div>
+              <blockquote>
+                Hamburguezas<BR>
+              </blockquote>
+            </div><!--FIN ITEM HAMBURGUESA-->
+            <div>
+              <blockquote>
+                Perro calientes<BR>
+              </blockquote>
+            </div><!--FIN PERRO CALIENTE-->
+              <div>
+                <blockquote class="coloLetra">
+                  Cachapas<BR>
+                </blockquote>
+              </div><!--FIN ITEM CACHAPAS-->
+           </div><!--FIN MENU-->  
+      </div><!--FIN AREA MEDIA DEL CENTRO-->
+      <div id=rig>
+          <div id=Publicidad>Imagen Publicitaria</div><!--FIN PUBLICIDAD--> 
+      </div>
+</div><!--FIN AREA CENTRAL VERTICAL-->
 
 <div id=bot> </div>
 
