--- a/pagina webmaster.html
+++ b/pagina webmaster.html
@@ -137,16 +137,7 @@
       </div>
 </div><!--FIN AREA CENTRAL VERTICAL-->
 
-<div id=bot> </div><div id=bot> </div><div id=bot> </div><div id=bot> </div><div id=bot> </div><div id=bot> </div><div id=bot> </div><div id=bot> </div><div id=bot> </div>
-
-
-
-	
-  
-
- 
-
-
+<div id=bot> </div>
 
 </div> <!--FIN CUERPO-->
 
