--- a/pagina webmaster.html
+++ b/pagina webmaster.html
@@ -49,7 +49,6 @@
 	/*background-color: rgba(255,255,153,0.7);*/
 }
 #Cuerpo #Publicidad {
-	align-content: left;
 	background-color: #FFC;
 	border-radius: 7px;
 	height: 100%;
@@ -122,6 +121,15 @@
 	font-weight: bold;
 	color: rgba(255,0,0,1);
 }
+.ColorMenu {
+	font-family: Verdana, Geneva, sans-serif;
+	font-size: 20px;
+	font-style: oblique;
+	font-weight: bold;
+	color: rgba(255,0,0,1);
+}
+
+.ColorTitu
 .ColorTitulos {
 	font-family: Verdana, Geneva, sans-serif;
 	font-size: 24px;
@@ -179,7 +187,7 @@
 			</div>
 			
 			<div id=Cent>
-				<div align=left class="ColorLetra" id=Menu>
+				<div align=left class="ColorMenu" id=Menu>
 	            <font class="ColorTitulos">MENU</font>
 	            <div>
 	              <blockquote>
