--- a/pagina webmaster.html
+++ b/pagina webmaster.html
@@ -5,7 +5,7 @@
 <title>HappyFood</title><!-- CABEZERA-->
 <style type="text/css">
 #Cuerpo {
-	height: auto;
+	height: 100%;
 	width: auto;
 	background-color: rgb(255,255,255);
 	background-image: url(file:./Imagenes/background.png);
@@ -21,7 +21,7 @@
 
 #Cuerpo #Logo {
 	height: 99%;
-	width: 136px;
+	width: 157px;
 	float: left;
 
 }
@@ -45,7 +45,7 @@
 	float: right;
 }
 #Cuerpo #ESLOGAN {
-	float: center;
+	float: left;
 	border-radius: 7px;
 	/*background-color: rgba(255,255,153,0.7);*/
 }
@@ -150,8 +150,8 @@
 
 <div id=Cuerpo>
 	<div id=Top>
-	  <div id= Logo><img src="./Imagenes/logo%20hamburguesa.png" width="136" height="150"/></div><!--FIN LOGO DE LA PAGINA-->
-	  <div align=center class="ColorEslogan" id=ESLOGAN>BARRIGA LLENA CORAZON CONTENTO</div> <!--ESLOGAN-->
+	  <div id= Logo width=50%><img src="./Imagenes/logo%20hamburguesa.png" width="157" height=100%/></div><!--FIN LOGO DE LA PAGINA-->
+	  <div class="ColorEslogan" id=ESLOGAN>BARRIGA LLENA CORAZON CONTENTO</div> <!--ESLOGAN-->
 	    <div id=Contactos align="left">
 	    	<a href="https://twitter.com/?lang=es"><img src="./Imagenes/twitter icon.png" width="32" height="32"/>
 	    	</a>
