--- a/pagina webmaster.html
+++ b/pagina webmaster.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="es">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>HappyFood</title><!-- CABEZERA-->
@@ -9,9 +9,8 @@
 	height: 100%;
 	width: 70%;
 	margin-left: 15%;
-	background-color: rgb(255,255,255);
-	background-image: url(file:./Imagenes/background.png);
-	background-repeat: repeat;
+	background-color: rgba(255,255,255,0);
+	
 	/*border-color: rgb(0,0,0);
     border-style:dotted;
     border-width: 100
@@ -48,6 +47,7 @@
 	border-radius: 15px;
 	width: 96;
 	float: right;
+	clear: both;
 	/*border-color: rgb(0,0,0);
     border-style:dotted;
     border-width: 100*/
@@ -70,6 +70,7 @@
 
 #Cuerpo #Top {
 	height: 150px;
+	border-radius: 7px;
 	background-color: rgba(255,255,153,0.7);
 	/*border-color: rgb(0,0,0);
     border-style:dotted;
@@ -216,7 +217,7 @@ body {
 	            <div>
 	              <blockquote class="ColorMenu">
 	              <img src="./Imagenes/comida hamburguesa.png"/>
-	                Hamburguezas<BR>
+	                Hamburguesas<BR>
 	              </blockquote>
 	            </div><!--FIN ITEM HAMBURGUESA-->
 	            <div>
@@ -244,12 +245,57 @@ body {
 				<img src="./Imagenes/pepsi vather.png" width=100% />
 			</div>
 	</div>
-			
+	<div id=Bot>
+	<script language="JavaScript"> document.write(cliente) </script>
+	</div>	
 </div>
 
-<div id=Bot>
-</div>
 
+<script language="JavaScript">
+	
+	cliente ="";	
+	do{
+		check=false;
+		cliente = prompt("Por favor permitanos saber su nombre");
+		if(cliente == ""){
+				alert("no ingreso ningun nombre");
+			}
+		else{	for (var i = 0; i <= cliente.length; i++) {
+				letra = cliente.substring(i,i+1);
+				document.write(letra);
+				switch(letra){
+					case '1': check = true; break;
+					case '2': check = true; break;
+					case '3': check = true; break;
+					case '4': check = true; break;
+					case '5': check = true; break;
+					case '6': check = true; break;
+					case '7': check = true; break;
+					case '8': check = true; break;
+					case '9': check = true; break;
+					case '0': check = true; break;
+					}
+				}
+			}		
+		if(check == true) {
+			alert("Disculpe no se puede ingresar numeros para  los nombres");
+		}
+	}while(check==true);
+	
+	var check = false;	
+
+	while(check==false){
+		check = true;
+		var edad = prompt("Por favor ingrese su edad");
+	   
+		if (edad < 10 || edad > 110){
+					alert ("la edad debe estar comprendida entre 10 y 110 annos");
+					check = false;
+				}
+
+		}//while
+
+	</script>
 
 </body>
 
