funcion 8 agregada, aun ninguna sirve

--- a/pagina webmaster.html
+++ b/pagina webmaster.html
@@ -361,10 +361,28 @@ body {
 			
 		}
 
+		function getSugerencia(){
+			sugerencia  = getNum(1,5);
+			switch(sugerencia){
+				case 1: alert("Te sugerimos las Pizzas");
+				break;
+				case 2: alert("Te sugerimos los Perros");
+				break;
+				case 3: alert("Te sugerimos las Hamburguesas");
+				break;
+				case 4: alert("Te sugerimos los Tacos");
+				break;
+				case 5: alert("Te sugerimos Algun Contorno");
+				break;
+			}
+		} 
+
 		function getNum(min, max) {
 		  return Math.floor((Math.random() * max) + min);
 		}
 	</script>
+
+
 
 </body>
 
