--- a/pagina webmaster.html
+++ b/pagina webmaster.html
@@ -96,7 +96,7 @@
 }
 #Cuerpo #Izq{
     float: left;
-	width: 20%;
+	width: 25%;
     /*border-style:dotted;
     border-width: 100
 
@@ -104,7 +104,7 @@
 }
 #Cuerpo #Cent{
     float: left;
-	width: 65%;
+	width: 60%;
     /*border-style:dotted;
     border-width: 100
 	*/
@@ -183,7 +183,9 @@ body {
 	<div id=Mid>
 			<div id=Izq>
 				<div id=Ubicacion>
-				<font  class="ColorTitulos2">LOCALIZACION</font><BR>
+				<a href="./Ubicacion.html"><font  class="ColorTitulos2"> LOCALIZACION</font>
+				</a>
+				<BR>
 		          <div>
 		            <blockquote>
 		              <span class="ColorLetra">Maracaibo<BR>
@@ -199,14 +201,16 @@ body {
 		              Caracas</span><BR>
 		            </blockquote>
 		          </div><!--FIN ITEM CARACAS-->
-		          <div><a href="https://www.yolopido.com"><img src="./Imagenes/transportar.png"/></a> </div><!--FIN ITEM A DOMICILIO-->
+		          <div><blockquote><span class="ColorLetra">
+		              A Domicilio</span>
+		            <a href="https://www.yolopido.com"><img src="./Imagenes/transportar.png"/></a></blockquote> </div><!--FIN ITEM A DOMICILIO-->
 		        </div><!--FIN UBICACION--> 
 			</div>
 			
 			<div id=Cent>
 				<div align=left class="ColorMenu" id=Menu>
 	            <font class="ColorTitulos">MENU</font>
-	            <div>
+	            <div onclick="goLink(1)">
 	              <blockquote class="ColorMenu">
 	              <img src="./Imagenes/comida pizza.png"/>
 	                Pizzas<BR>
@@ -214,25 +218,25 @@ body {
 	              <div id=itempizza1></div>
 	              <div id=itempizza2></div>
 	            </div><!--FIN ITEM PIZZA-->
-	            <div>
+	            <div onclick="goLink(2)">
 	              <blockquote class="ColorMenu">
 	              <img src="./Imagenes/comida hamburguesa.png"/>
 	                Hamburguesas<BR>
 	              </blockquote>
 	            </div><!--FIN ITEM HAMBURGUESA-->
-	            <div>
+	            <div onclick="goLink(3)">
 	              <blockquote class="ColorMenu">
 	              	<img src="./Imagenes/comida perro.png"/>
 	                Perros calientes<BR>
 	              </blockquote>
 	            </div><!--FIN PERRO CALIENTE-->
-	              <div>
+	              <div onclick="goLink(4)">
 	                <blockquote class="ColorMenu">
 	                <img src="./Imagenes/taco.png"/>
 	                  Taco<BR>
 	                </blockquote>
 	              </div><!--FIN ITEM CACHAPAS-->
-	              <div>
+	              <div onclick="goLink(5)">
 	                <blockquote class="ColorMenu">
 	                <img src="./Imagenes/nachos.png"/>
 	                  Otros<BR>
@@ -380,6 +384,20 @@ body {
 		function getNum(min, max) {
 		  return Math.floor((Math.random() * max) + min);
 		}
+
+		function goLink(link){
+			switch(link){
+				case 1:  window.locationf="./MenuPizza";
+				break;
+				case 2:  window.locationf="./MenuHamburguesas";
+				break;
+				case 3:  window.locationf="./MenuPerros";
+				break;
+				case 4:  window.locationf="./MenuTacos";
+				break;
+				case 5:  window.locationf="./MenuOtros";
+				break;
+
 	</script>
 
 
