--- a/pagina webmaster.html
+++ b/pagina webmaster.html
@@ -1,169 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es">
+
+<link rel="stylesheet" href="css/estilos.css">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>HappyFood</title><!-- CABEZERA-->
-<style type="text/css">
 
-#Cuerpo {
-	height: 100%;
-	width: 70%;
-	margin-left: 15%;
-	background-color: rgba(255,255,255,0);
-	
-	/*border-color: rgb(0,0,0);
-    border-style:dotted;
-    border-width: 100
-	font-family: Verdana, Geneva, sans-serif;
-	background-image: url(file:./Imagenes/background.png);
-	background-repeat: repeat;
-	*/
-}
 
-#Cuerpo #Logo {
-	height: 99%;
-	width: 20%;
-	float: left;
-	/*border-color: rgb(0,0,0);
-    border-style:dotted;
-    border-width: 100*/
-
-}
-
-#Cuerpo #Menu {
-	background-color: rgba(255,204,0,0.7);
-    border-radius: 7px;
-    width: 99%;
-    float: left;
-}
-#Cuerpo #Ubicacion {
-	background-color: rgba(255,255,81,0.7);
-	border-radius: 7px;
-	float: left;
-	width: 99%;
-}
-#Cuerpo #Contactos {
-	background-color: rgba(255,255,255,0.8);
-	border-radius: 15px;
-	width: 96;
-	float: right;
-	clear: both;
-	/*border-color: rgb(0,0,0);
-    border-style:dotted;
-    border-width: 100*/
-}
-#Cuerpo #ESLOGAN {
-	float: left;
-	border-radius: 7px;
-	/*border-color: rgb(0,0,0);
-    border-style:dotted;
-    border-width: 100*/
-}
-#Cuerpo #Publicidad {
-	background-color: #FFC;
-	border-radius: 7px;
-	height: 100%;
-	width: 100%;
-	color: #F00;
-	clear: both;
-}
-
-#Cuerpo #Top {
-	height: 150px;
-	border-radius: 7px;
-	background-color: rgba(255,255,153,0.7);
-	/*border-color: rgb(0,0,0);
-    border-style:dotted;
-    border-width: 100
-
-	*/
-}
-#Cuerpo #Mid{
-	font-family: Verdana, Geneva, sans-serif;
-	/* border-color: rgb(0,0,0);
-    border-style:dotted;
-    border-width: 100
-
-	*/
-}
-#Cuerpo #Bot{
-	clear: both;
-	/*border-color: rgb(0,0,0);
-    border-style:dotted;
-    border-width: 100
-
-	*/
-}
-#Cuerpo #Izq{
-    float: left;
-	width: 25%;
-    /*border-style:dotted;
-    border-width: 100
-
-	*/
-}
-#Cuerpo #Cent{
-    float: left;
-	width: 60%;
-    /*border-style:dotted;
-    border-width: 100
-	*/
-}
-#Cuerpo #Der{
-	float: left;
-	width: 15%;
-	font-family: Verdana, Geneva, sans-serif;
-	/*border-style:dotted;
-    border-width: 100;
-
-	*/
-}
-.ColorLetra {
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 18px;
-	font-style: oblique;
-	font-weight: bold;
-	color: rgba(255,0,0,1);
-}
-.ColorMenu {
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 30px;
-	font-style: oblique;
-	font-weight: bold;
-	color: rgba(255,0,0,1);
-}
-
-.ColorTitulos {
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 36px;
-	font-weight: bold;
-	color: #39C;
-}
-
-.ColorTitulos2 {
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 24px;
-	font-weight: bold;
-	color: #39C;
-}
-.ColorEslogan {
-	font-family: Verdana, Geneva, sans-serif;
-	font-size: 36px;
-	font-weight: bold;
-	color: rgba(255,61,0,1);
-	text-decoration: blink;
-}
-body {
-	background-color: rgb(255,255,255);
- 	background-image: url(file:./Imagenes/background.png);
-    background-repeat: repeat;
-    margin: 0px;
-    height: 100%;
-}
-
-</style>
 </head>
-<body> 
+<body onload="load()"> 
 <div id=Cuerpo>
 	<div id=Top>
 	  <div id= Logo width=50%><img src="./Imagenes/logo%20hamburguesa.png" width="157" height=100%/></div><!--FIN LOGO DE LA PAGINA-->
@@ -254,154 +99,26 @@ body {
 	                  No puedes decidir?
 	                </blockquote>
 	<button onclick="flip()">Lanza una Moneda</button>
-	<!---
-	<script type="JavaScript"> 
-	    nom= getNombre();
-	    fnom = FormatNombre(nom);
-	    fecha = getCumple();
-	    CumplePromo(fecha, fnom);
-		imprimir(fnombre+"te Recomendamos hoy las Hamburguesas"); </script>  -->
+	
 	</div>	
 </div>
-
-
-	<script type="JavaScript">
+<!---	<script type="text/javascript">
 		
-		cliente ="";	
-		
-		function getNombre(){
-			do{
-					check=false;
-					cliente = prompt("Por favor permitanos saber su nombre");
-					if(cliente == ""){
-							alert("no ingreso ningun nombre");
-						}
-					else{	for (var i = 0; i <= cliente.length; i++) {
-							letra = cliente.substring(i,i+1);
-							document.write(letra);
-							switch(letra){
-								case '1': check = true; break;
-								case '2': check = true; break;
-								case '3': check = true; break;
-								case '4': check = true; break;
-								case '5': check = true; break;
-								case '6': check = true; break;
-								case '7': check = true; break;
-								case '8': check = true; break;
-								case '9': check = true; break;
-								case '0': check = true; break;
-								}
-							}
-						}		
-					if(check == true) {
-						alert("Disculpe no se puede ingresar numeros para  los nombres");
-					}
-				}while(check==true);
-				return cliente;
-		}
-		
-		function FormatNombre(String nom){
-			var fnombre;
-			var fapellido;
-			var nombre_apellido = nom.split(" ");
-			
-			fnombre = fnombre+.nombre_apellido.charAt(0).toUpperCase();
-			for (var i = 1; i < nombre_apellido[0].length; i++) {
-				fnombre = fnombre+.nombre_apellido.charAt(i).toLowerCase();
-			}
-			return fnombre;
-		}
-		
-		function getCumple(){
-			var check = false;	
-			var mesC;
-			var diaC;
-
-
-			while(check==false){
-			check = true;
-			diaC = prompt("Por favor ingrese dia de nacimiento");
-
-			if (diaC <= 0 ||  diaC.length > 2){      
-						alert ("error al ingresar dia");
-						check = false;
-					}
-			}//while
-		
-
-			while(check==false){
-			check = true;
-			mesC = prompt("Por favor ingrese dia de nacimiento");
-
-			if (mesC <= 0 ||  mesC.length > 12){      
-						alert ("error al ingresar mes");
-						check = false;
-					}
-			}//while
-
-			return diaC+"-"+mesC;
-		}
-		
-		function CumplePromo(string cumplannos,string nombre){
-			 	
-			 var fecha = new Date();
-		   	 dia = fecha.getDate();
-		   	 mes = fecha.getMonth();
-			 var aux = cumplannos.spli("-");
-			 
-			 if(dia == aux[1] && mes = aux[2])
-			 	alert("FELIZ CUMPLEAÑOS "+cliente+"!!! para celebrarlo te ofrecemos un 12% de descuento!!! Feliz dia, Feliz comida!");
-
-		}
-		
-		function imprimir (string text){
-			document.write(text);
-		}
-
 		function flip(){
+			alert("Se lanzara una moneda");
 			coin = getNum(1,2);
 			if (coin == 1) alert("CARA");
 			if (coin == 2) alert("SELLO");
 			
 		}
 
-		function getSugerencia(){
-			sugerencia  = getNum(1,5);
-			switch(sugerencia){
-				case 1: alert("Te sugerimos las Pizzas");
-				break;
-				case 2: alert("Te sugerimos los Perros");
-				break;
-				case 3: alert("Te sugerimos las Hamburguesas");
-				break;
-				case 4: alert("Te sugerimos los Tacos");
-				break;
-				case 5: alert("Te sugerimos Algun Contorno");
-				break;
-			}
-		} 
-
 		function getNum(min, max) {
 		  return Math.floor((Math.random() * max) + min);
 		}
 
-		function goLink(link){
-			switch(link){
-				case 1:  window.locationf="./MenuPizza";
-				break;
-				case 2:  window.locationf="./MenuHamburguesas";
-				break;
-				case 3:  window.locationf="./MenuPerros";
-				break;
-				case 4:  window.locationf="./MenuTacos";
-				break;
-				case 5:  window.locationf="./MenuOtros";
-				break;
+	</script> -->
 
-	</script>
-
-
-
+<script src="./script.js"></script>
 </body>
 
 </html>
